[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "a small pack of fun games for your terminal"
authors = ["AlexMomot-717 <momot-717@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "brain_games"},
]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
