[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = "a small pack of fun games for your terminal"
authors = ["AlexMomot-717 <momot-717@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "brain_games"},
]

[tool.poetry.dependencies]
python = "~3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
black = "^23.1.0"
flake8 = "^6.0.0"
gitlint = "^0.19.1"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
